
project(bullet CXX)

set(bullet_SOURCES 
    btActivatingCollisionAlgorithm.cpp
    btAlignedAllocator.cpp
    btAxisSweep3.cpp
    btBox2dBox2dCollisionAlgorithm.cpp
    btBox2dShape.cpp
    btBoxBoxCollisionAlgorithm.cpp
    btBoxBoxDetector.cpp
    btBoxShape.cpp
    btBroadphaseProxy.cpp
    btBvhTriangleMeshShape.cpp
    btCapsuleShape.cpp
    btCollisionAlgorithm.cpp
    btCollisionDispatcher.cpp
    btCollisionObject.cpp
    btCollisionShape.cpp
    btCollisionWorld.cpp
    btCompoundCollisionAlgorithm.cpp
    btCompoundShape.cpp
    btConcaveShape.cpp
    btConeShape.cpp
    btConeTwistConstraint.cpp
    btContactConstraint.cpp
    btContactProcessing.cpp
    btContinuousConvexCollision.cpp
    btContinuousDynamicsWorld.cpp
    btConvex2dConvex2dAlgorithm.cpp
    btConvex2dShape.cpp
    btConvexCast.cpp
    btConvexConcaveCollisionAlgorithm.cpp
    btConvexConvexAlgorithm.cpp
    btConvexHull.cpp
    btConvexHullShape.cpp
    btConvexInternalShape.cpp
    btConvexPlaneCollisionAlgorithm.cpp
    btConvexPointCloudShape.cpp
    btConvexShape.cpp
    btConvexTriangleMeshShape.cpp
    btCylinderShape.cpp
    btDbvtBroadphase.cpp
    btDbvt.cpp
    btDefaultCollisionConfiguration.cpp
    btDiscreteDynamicsWorld.cpp
    btDispatcher.cpp
    btEmptyCollisionAlgorithm.cpp
    btEmptyShape.cpp
    btGeneric6DofConstraint.cpp
    btGeneric6DofSpringConstraint.cpp
    btGenericPoolAllocator.cpp
    btGeometryUtil.cpp
    btGhostObject.cpp
    btGImpactBvh.cpp
    btGImpactCollisionAlgorithm.cpp
    btGImpactQuantizedBvh.cpp
    btGImpactShape.cpp
    btGjkConvexCast.cpp
    btGjkEpa2.cpp
    btGjkEpaPenetrationDepthSolver.cpp
    btGjkPairDetector.cpp
    btHeightfieldTerrainShape.cpp
    btHinge2Constraint.cpp
    btHingeConstraint.cpp
    btInternalEdgeUtility.cpp
    btKinematicCharacterController.cpp
    btManifoldResult.cpp
    btMinkowskiPenetrationDepthSolver.cpp
    btMinkowskiSumShape.cpp
    btMultimaterialTriangleMeshShape.cpp
    btMultiSapBroadphase.cpp
    btMultiSphereShape.cpp
    btOptimizedBvh.cpp
    btOverlappingPairCache.cpp
    btPersistentManifold.cpp
    btPoint2PointConstraint.cpp
    btPolyhedralConvexShape.cpp
    btQuantizedBvh.cpp
    btQuickprof.cpp
    btRaycastCallback.cpp
    btRigidBody.cpp
    btScaledBvhTriangleMeshShape.cpp
    btSequentialImpulseConstraintSolver.cpp
    btSerializer.cpp
    btShapeHull.cpp
    btSimpleBroadphase.cpp
    btSimpleDynamicsWorld.cpp
    btSimulationIslandManager.cpp
    btSliderConstraint.cpp
    btSolve2LinearConstraint.cpp
    btSphereBoxCollisionAlgorithm.cpp
    btSphereShape.cpp
    btSphereSphereCollisionAlgorithm.cpp
    btSphereTriangleCollisionAlgorithm.cpp
    btStaticPlaneShape.cpp
    btStridingMeshInterface.cpp
    btSubSimplexConvexCast.cpp
    btTetrahedronShape.cpp
    btTriangleBuffer.cpp
    btTriangleCallback.cpp
    btTriangleIndexVertexArray.cpp
    btTriangleIndexVertexMaterialArray.cpp
    btTriangleMesh.cpp
    btTriangleMeshShape.cpp
    btTriangleShapeEx.cpp
    btTypedConstraint.cpp
    btUniformScalingShape.cpp
    btUnionFind.cpp
    btUniversalConstraint.cpp
    btVoronoiSimplexSolver.cpp
    gim_box_set.cpp
    gim_contact.cpp
    gim_memory.cpp
    gim_tri_collision.cpp
    SphereTriangleDetector.cpp)

add_library(bullet STATIC ${bullet_SOURCES})

